--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
+    "react-native-check-box": "^2.1.7",
     "react-native-hide-show-password-input": "^1.1.0",
     "react-native-switch-toggle": "^1.1.4",
     "react-native-web": "~0.13.12"
